<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Calc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37000000"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/screen"
            android:layout_width="370dp"
            android:layout_height="238dp"
            android:layout_marginTop="16dp"
            android:background="#666"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/stack4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/s4"
                android:textColor="#fff"
                app:layout_constraintBottom_toTopOf="@+id/stack3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stack3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/s3"
                android:textColor="#fff"
                app:layout_constraintBottom_toTopOf="@+id/stack2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stack4" />

            <TextView
                android:id="@+id/stack2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/s2"
                android:textColor="#fff"
                app:layout_constraintBottom_toTopOf="@+id/stack1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stack3" />

            <TextView
                android:id="@+id/stack1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/s1"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stack2" />

            <TextView
                android:id="@+id/main_num"
                android:layout_width="120dp"
                android:layout_height="38dp"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screen">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/undo"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".20"
                    android:height="60dp"
                    android:backgroundTint="#f00"
                    android:text="@string/undo"
                    android:textColor="#000" />

                <Button
                    android:id="@+id/drop"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".20"
                    android:height="60dp"
                    android:backgroundTint="#f00"
                    android:text="@string/drop"
                    android:textColor="#000" />

                <Button
                    android:id="@+id/swap"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".20"
                    android:height="60dp"
                    android:backgroundTint="#f00"
                    android:text="@string/swap"
                    android:textColor="#000" />

                <Button
                    android:id="@+id/ac"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".20"
                    android:height="60dp"
                    android:backgroundTint="#f00"
                    android:text="@string/ac"
                    android:textColor="#000" />

                <Button
                    android:id="@+id/settings"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".20"
                    android:height="60dp"
                    android:backgroundTint="#f00"
                    android:text="@string/gear"
                    android:textColor="#000" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/num7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/_7"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/num8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/_8"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/num9"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/_9"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/pow"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/pow"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/sqrt"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/sqrt2"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/num4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/_4"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/num5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/_5"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/num6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/_6"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/actMulti"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/multi2"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/actDiv"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/div2"
                    android:textColor="@android:color/white" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/num1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/_1"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/num2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/_2"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/num3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/_3"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/actAdd"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/plus"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/actSub"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/minus"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/num0"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/_0"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/actChgSign"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/plusminus"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/dot"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#90000000"
                    android:text="@string/dot"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/back"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#f00"
                    android:text="@string/del2"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/enter"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.2"
                    android:height="60dp"
                    android:backgroundTint="#f00"
                    android:text="@string/enter"
                    android:textColor="@android:color/black" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>